# e-commerce

./: .env.example  .vercelignore  DEPLOY.md  FIX_VERCEL_UV_ERROR.md  LICENSE  README.md  VERCEL_DEPLOYMENT.md  build.sh  pip.ini  pyproject.toml  requirements.txt  setup.py  vercel.json
core/: settings.py  urls.py  views.py
core/models/: cart.py  cart_product.py  product.py  user.py
template/: home.html
