[project]
name = "shopxpress-ecommerce"
version = "1.0.0"
description = "Modern e-commerce platform with Django, Tailwind CSS and Material Design"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0.2",
    "djangorestframework>=3.14.0",
    "python-decouple>=3.8",
    "gunicorn>=21.2.0",
    "whitenoise>=6.5.0",
    "psycopg2-binary>=2.9.9",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core"]
